# HALFpipe

./: .coveragerc  .dockerignore  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierrc  .zenodo.json  CHANGELOG.md  CHANGELOG.rst  CNAME  CODEOWNERS  Dockerfile  Dockerfile_devel  LICENSE.txt  MANIFEST.in  README.html  README.md  README.rst  Singularity  Singularity.1.0.0b4  Singularity.1.0.0b5  Singularity.1.0.0b6  Singularity.def  VERSION  build_halfpipe_deps.py  flake.nix  install-requirements.sh  mypy.ini  pipeline.def  postsetup.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-test.in  requirements-test.txt  requirements.in  requirements.txt  setup.cfg  setup.py  (+4 more)
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  codeql-analysis.yml  continuous_integration.yml
.singularity-hub/: Singularity  Singularity.1.0.0  Singularity.1.0.1
halfpipe/: __init__.py  _version.py  cluster.py  database.py  design.py  exclude.py  execgraph.py  hooks.py  logger.py  memory.py  resource.py  run.py  signals.py  utils.py  watchdog.py  workdir.py
halfpipe/cli/: halfcoin.py  parser.py  run.py
halfpipe/collect/: bold.py  fmap.py  metadata.py
halfpipe/errors/: __init__.py
halfpipe/file_index/: base.py  bids.py
halfpipe/fixes/: __init__.py  nodes.py
halfpipe/ingest/: bids.py  collect.py  condition.py  database.py  design.py  events.py  exclude.py  glob.py  resolve.py  spreadsheet.py
halfpipe/interface/: __init__.py  ants.py  conditions.py  connectivity.py  dof.py  model.py  resample.py  resultdict.py  transformer.py
halfpipe/interfaces/: conditions.py  connectivity.py  grand_mean_scaling.py  transformer.py
halfpipe/io/: __init__.py  atomic_table.py  cache.py  condition.py  dictlistfile.py  direction.py  indexedfile.py  lock.py  repetition_time.py  resulthooks.py  signals.py  spreadsheet.py
halfpipe/logging/: __init__.py  base.py  context.py  filter.py  formatter.py  handler.py
halfpipe/model/: __init__.py  contrast.py  exclude.py  feature.py  filter.py  metadata.py  model.py  resultdict.py  setting.py  spec.py  utils.py  variable.py
halfpipe/plugins/: __init__.py  linear.py  multiproc.py  refcount.py  reftracer.py  testing.py
halfpipe/result/: aggregate.py  base.py  filter.py  variables.py
halfpipe/schema/: base.py  filter.py  result.py  setting.py
halfpipe/spec/: base.py
halfpipe/stats/: __init__.py  algorithms.py  base.py  descriptive.py  design.py  fit.py  flame1.py  heterogeneity.py  mcar.py  miscmaths.py
halfpipe/tests/: conftest.py  resource.py  test_cluster.py  test_exclude.py  test_memory.py  test_signals.py
halfpipe/ui/: base.py  bids.py  higherlevel.py  metadata.py  pattern.py  step.py  utils.py
halfpipe/utils/: __init__.py  cache.py  copy.py  environment.py  format.py  future.py  hash.py  image.py  json.py  lock.py  matrix.py  multiprocessing.py  ops.py  path.py  pickle.py  table.py  time.py
halfpipe/workflow/: __init__.py  base.py  bypass.py  collect.py  constants.py  convert.py  execgraph.py  factory.py  filt.py  fmriprep.py  memory.py  mriqc.py  space.py
halfpipe/workflows/: base.py  convert.py  execgraph.py  factory.py  fmriprep.py  memory.py
images/coinstac/: Dockerfile
pipeline/: __init__.py  _version.py  cli.py  conditions.py  database.py  execgraph.py  fake.py  file_checks.py  fmriprepconfig.py  fmriprepsettings.py  info.py  logger.py  logging.py  nodes.py  patterns.py  resources.py  run.py  tpl-MNI152NLin6Asym_from-MNI152NLin2009cAsym_mode-image_xfm.h5  tpl_MNI152NLin6Asym_from_MNI152NLin2009cAsym_mode_image_xfm.h5  utils.py  watchdog.py  workflow.py
pipeline/compiler/: __init__.py  database.py
pipeline/data/: config.toml
pipeline/interface/: __init__.py  cache.py  conditions.py  connectivity.py  design.py  dof.py  filter.py  fsl.py  merge.py  model.py  motion.py  qualitycheck.py  reho.py  report.py  resample.py  resampling.py  resultdict.py  scaling.py  segmentation.py  stats.py  utils.py
pipeline/io/: __init__.py  appendablefile.py  condition.py  dictlistfile.py  direction.py  indexedfile.py  repetition_time.py  resulthooks.py  signals.py  spreadsheet.py
pipeline/model/: __init__.py  database.py  fmap.py  grouplevelanalysis.py  spec.py  subjectlevelanalysis.py  tag.py
pipeline/plugins/: __init__.py  linear.py  multiproc.py  refcount.py
pipeline/qc/: qc.htm  qc.tpl  qc2.htm  qc3.htm
pipeline/report/: preproc.py
pipeline/reports/: indexedfile.py
pipeline/spec/: __init__.py  base.py  bids.py  direction.py  file.py  qualitycheck.py
pipeline/ui/: __init__.py  anat.py  base.py  bids.py  fmap.py  func.py  grouplevelanalysis.py  higherlevel.py  pattern.py  step.py  utils.py
pipeline/view/: __init__.py  base.py  step.py
pipeline/workflow/: __init__.py  alff.py  base.py  confounds.py  derivatives.py  fake.py  falff.py  filt.py  filter.py  firstlevel.py  fmriprepsettings.py  func.py  higherlevel.py  interfaces.py  memory.py  motion.py  multirun.py  patch.py  qualitycheck.py  reho.py  report.py  rest.py  smooth.py  space.py  stats.py  stats_wg.py  task.py  temporalfilter.py  tsnr.py  utils.py
qualitycheck/: README.md  package.json  rollup.config.js  vue.config.js
qualitycheck/public/: index.html
qualitycheck/src/: app.vue  index.js  index.pug  main.js  types.js
recipes/: conda_build_config.yaml
recipes/acres/: meta.yaml
recipes/afni/: 001-pip-install.patch  003-rwc-boolean-char.patch  004-suma-comm-struct.patch  build.sh  meta.yaml
recipes/brainspace/: meta.yaml
recipes/fmripost_aroma/: 001-compat-nilearn-0-12-1.patch  002-add-mem-gb.patch  meta.yaml
recipes/fmriprep/: meta.yaml
recipes/gica_cmd/: build.sh  meta.yaml
recipes/halfpipe/: meta.yaml
recipes/mapca/: meta.yaml
recipes/matlab-runtime/: build.sh  meta.yaml
recipes/migas/: meta.yaml
recipes/nipype/: meta.yaml  (+1 more)
sandbox/: cgroups.py  run_node.py  skateboard.py
src/: start.py
tests/: conftest.py  create_mock_bids_dataset.py  resource.py  test_cluster.py  test_design.py  test_exclude.py  test_fsldir.py  test_memory.py  test_signals.py
(+981 files in other folders)
