[metadata]
url = https://github.com/mindandbrain/halfpipe
author = Lea Waller
author_email = lea.waller@charite.de
maintainer = Lea Waller
maintainer_email = lea.waller@charite.de
description = ENIGMA halfpipe facilitates reproducible analysis of fMRI data, including preprocessing, single-subject, and group analysis
long_description = file:README.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = GNU General Public License v3 (GPLv3)
platforms = Linux
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
python_requires = >=3.7
setup_requires =
    setuptools >= 38.3.0
install_requires =
    numpy >= 1.20
    scipy >= 1.6.2
    mpmath >= 1.1.0
    gmpy2 >= 2.0.8
    pandas >= 1.2.0
    patsy
    statsmodels >= 0.12.2
    scikit-learn >= 0.24.0
    nilearn >= 0.7.1
    odfpy
    xlrd >= 1.0.0
    openpyxl
    nibabel >= 3.2.1
    indexed-gzip >= 1.5.3
    nipype >= 1.6.1
    nitime
    fmriprep
    smriprep
    sdcflows == 1.3.3
    dipy == 1.4.0
    mriqc
    niworkflows
    templateflow >= 0.7.1
    pybids >= 0.13.1
    flufl.lock >= 5.0.3
    fasteners >= 0.15
    requests >= 2.25.1
    inflect
    inflection
    marshmallow >= 3.10.0
    marshmallow-oneofschema
    pint
    matplotlib ~= 3.3
    seaborn
    svgutils
    tabulate
    chardet >= 4.0
    pympler >= 0.9
    stackprinter >= 0.2.5
    line_profiler
    more-itertools >= 8.7.0
    calamities >= 0.0.14
packages = find:
  
[options.entry_points]
console_scripts =
    halfpipe=halfpipe.cli.run:main

[options.extras_require]
tests =
    pytest
    pytest-cov
    pytest-timeout
    pytest-github-actions-annotate-failures
    flake8

[versioneer]
VCS = git
style = pep440
versionfile_source = halfpipe/_version.py
versionfile_build = halfpipe/_version.py
tag_prefix =
parentdir_prefix =

[flake8]
max-line-length = 127
doctests = True
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/, versioneer.py, _version.py
select = C,E,F,W,B,B950
ignore = E203, E501, W503
