[metadata]
url = https://github.com/HALFpipe/HALFpipe
author = Lea Waller
author_email = lea.waller@charite.de
maintainer = Lea Waller
maintainer_email = lea.waller@charite.de
description = ENIGMA halfpipe facilitates reproducible analysis of fMRI data, including preprocessing, single-subject, and group analysis
long_description = file:README.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = GNU General Public License v3 (GPLv3)
platforms = Linux
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
python_requires = >=3.7
setup_requires =
    setuptools >= 40.8.0
packages = find:

[options.entry_points]
console_scripts =
    halfpipe=halfpipe.cli.run:main

[versioneer]
VCS = git
style = pep440
versionfile_source = halfpipe/_version.py
versionfile_build = halfpipe/_version.py
tag_prefix =
parentdir_prefix =

[flake8]
max-line-length = 127
doctests = True
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/, versioneer.py, _version.py
select = C,E,F,W,B,B950
ignore = E203, E501, W503
