[metadata]
name = halfpipe
description = ENIGMA HALFpipe facilitates reproducible analysis of fMRI data, including preprocessing, single-subject, and group analysis
author = Lea Waller
author_email = lea@fmri.science
license = GNU General Public License v3 (GPLv3)
long_description = file:README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/HALFpipe/HALFpipe

platforms = Linux

classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.10
packages = find_namespace:
include_package_data = True

[options.entry_points]
console_scripts =
    halfpipe=halfpipe.cli.run:main

[flake8]
max-line-length = 127
doctests = True
exclude = .git, .eggs, __pycache__, tests/, docs/, build/, dist/, versioneer.py, _version.py
select = C,E,F,W,B,B950
ignore = E203, E501, W503
